# supertroopere30e5972-b378-44db-a04e-73ea685f338c

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: addTaskToProject_service.py  createContent_service.py  createProject_service.py  createUserPortfolio_service.py  createUser_service.py  createWorkspace_service.py  deleteContent_service.py  deleteProject_service.py  deleteUserPortfolio_service.py  deleteWorkspace_service.py  fetchContent_service.py  getFeedback_service.py  getProjectTasks_service.py  getProjects_service.py  getUserPortfolio_service.py  getUser_service.py  getWorkspaceDetails_service.py  listAllWorkspaces_service.py  listFeedback_service.py  listUsers_service.py  publicProjectInfo_service.py  server.py  updateFeedbackStatus_service.py  updateProject_service.py  updateUserPortfolio_service.py  updateUser_service.py  uploadContent_service.py
